fix CVE-2022-37434 for nginx mainline and stable
- fix [CVE-2022-37434](https://nvd.nist.gov/vuln/detail/CVE-2022-37434) in zlib
  - https://github.com/madler/zlib/commit/eff308af425b67093bab25f80f1ae950166bece1
  - https://github.com/madler/zlib/commit/1eb7682f845ac9e9bf9ae35bbfb3bad5dacbd91d
- add Changelog
- update readme `Nginx config test` section
- update `build.sh`
  - switch from `sh` to `bash`
  - run `nginx -t` config test after build completion
  - run `nginx -V` after build completion
  - add build start and end timesamps
  - add build log upload command and url
- remove some packages for the build env
  - pcre2-dev
  - zlib-dev
- add `BUILD_THROTTLE` build env
  Reduce build jobs by 4 if there are more then 7 cores else set jobs to half of core count. \
  this is useful if you dont want to congest the cpu of your building system
- `sites/localhost.conf` \
  override default content type for `GET /health` requests
- add runtime env support of `NGINX_ENTRYPOINT_QUIET_LOGS` to docker entrypoint scripts

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       context: .
       args:
         ALPINE_VERSION: $ALPINE_VERSION
+        BUILD_THROTTLE: $BUILD_THROTTLE
         BUSYBOX_VERSION: $BUSYBOX_VERSION
         CFLAGS_ADD: $CFLAGS_ADD
         HEADERS_MORE_VERSION: $HEADERS_MORE_VERSION
