Update zlib and downgrade openssl
- zlib upgrade to 1.2.13
  - https://www.zlib.net/ChangeLog.txt
    This remedies CVE-2022-37434
- openssl downgrade to 3.0.6
  - https://mta.openssl.org/pipermail/openssl-announce/2022-October/000237.html

--- a/example.tmpl.env
+++ b/example.tmpl.env
@@ -16,12 +16,13 @@ BUILD_CACHE=
 
 # Reduce build jobs by 4 if there are more then 7 cores else set jobs to half of core count
 # This is useful if you dont want to congest the cpu of your building system
-BUILD_THROTTLE=y
+BUILD_THROTTLE=n
 
 # https://hub.docker.com/_/alpine
 ALPINE_VERSION=3.16.2
 
 # https://hg.nginx.org/nginx/tags
+# https://hub.docker.com/_/nginx
 NGINX_VERSION={{ NGINX_VERSION }}
 NGINX_COMMIT={{ NGINX_COMMIT }}
 
@@ -29,11 +30,11 @@ NGINX_COMMIT={{ NGINX_COMMIT }}
 NJS_COMMIT=1592d46d9076
 
 # https://www.openssl.org/news/changelog.html
-OPENSSL_VERSION=3.0.6
+OPENSSL_VERSION=3.0.5
 
 # Supported versions: https://nginx.org/en/docs/configure.html
 # Downloaded via: https://zlib.net/
-ZLIB_VERSION=1.2.12
+ZLIB_VERSION=1.2.13
 
 # https://github.com/PCRE2Project/pcre2/releases
 PCRE_VERSION=10.40
